--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dhot.</title>
-    <link rel="stylesheet" href="public/style.css">
+    <link rel="stylesheet" href="/public/style.css">
     <!-- Include Three.js library -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/examples/js/controls/OrbitControls.js"></script>
@@ -22,7 +22,7 @@
             <!-- 3D Model Viewer Container -->
             <div class="three-js-container" id="three-js-container" aria-label="3D Model Viewer" style="width: 100%; height: 400px;">
                 <h4>3D Model Viewer</h4>
-                <script type="module" src="src/main.js"></script>
+                <script type="module" src="/src/main.js"></script>
             </div>
         </div>
 
