--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <!-- Right Section: Product Details -->
         <div class="product-details">
-            <h1 class="product-title">Dhot Max Table</h1>
+            <h1 class="product-title">Dhot Configurator</h1>
             <p class="product-description">Premium outdoor table perfect for all occasions...</p>
 
             <!-- Pricing Section -->
