--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 
         <!-- Right Section: Product Details -->
         <div class="product-details">
-            <h1 class="product-title">Dhot Max Table</h1>
-            <p class="product-description">Premium outdoor table perfect for all occasions...</p>
+            <h1 class="product-title">Dhot Configurator</h1>
+            <p class="product-description">Premium outdoor pergola perfect for all occasions...</p>
 
             <!-- Pricing Section -->
             <div class="pricing-section">
